Use supabase and graphql to register one user

--- a/src/Host/OspreyPulseAPI.Api/appsettings.json
+++ b/src/Host/OspreyPulseAPI.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Supabase": {
+    "Authority": "",
+    "JwtSecret": "",
+    "Audience": "authenticated"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
