--- a/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
+++ b/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
   },
+  "Supabase": {
+    "Authority": "http://127.0.0.1:54321/auth/v1",
+    "JwtSecret": "super-secret-jwt-token-with-at-least-32-characters-long",
+    "Audience": "authenticated"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
