--- a/src/Modules/Identity/OspreyPulseAPI.Modules.Identity.Application/OspreyPulseAPI.Modules.Identity.Application.csproj
+++ b/src/Modules/Identity/OspreyPulseAPI.Modules.Identity.Application/OspreyPulseAPI.Modules.Identity.Application.csproj
@@ -1,6 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\OspreyPulseAPI.Shared.Kernel\OspreyPulseAPI.Shared.Kernel.csproj" />
     <ProjectReference Include="..\OspreyPulseAPI.Modules.Identity.Domain\OspreyPulseAPI.Modules.Identity.Domain.csproj" />
   </ItemGroup>
 
