User login and register basic logic

--- a/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
+++ b/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
@@ -3,8 +3,10 @@
     "DefaultConnection": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
   },
   "Supabase": {
+    "Url": "http://127.0.0.1:54321",
     "Authority": "http://127.0.0.1:54321/auth/v1",
-    "JwtSecret": "super-secret-jwt-token-with-at-least-32-characters-long",
+    "ServiceRoleKey": "sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz",
+    "JwtSecret": "sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz",
     "Audience": "authenticated"
   },
   "Logging": {
