--- a/src/Modules/Identity/OspreyPulseAPI.Modules.Identity.Infrastructure/OspreyPulseAPI.Modules.Identity.Infrastructure.csproj
+++ b/src/Modules/Identity/OspreyPulseAPI.Modules.Identity.Infrastructure/OspreyPulseAPI.Modules.Identity.Infrastructure.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
   </ItemGroup>
 
   <PropertyGroup>
