User secrets and login and register test

--- a/src/Host/OspreyPulseAPI.Api/OspreyPulseAPI.Api.csproj
+++ b/src/Host/OspreyPulseAPI.Api/OspreyPulseAPI.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1546dbe2-9190-47ff-a9c2-ddd5c21e6672</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
