--- a/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
+++ b/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
@@ -1,13 +1,19 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
+    "DefaultConnection": ""
   },
   "Supabase": {
     "Url": "http://127.0.0.1:54321",
     "Authority": "http://127.0.0.1:54321/auth/v1",
-    "ServiceRoleKey": "sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz",
-    "JwtSecret": "sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz",
+    "ServiceRoleKey": "",
+    "JwtSecret": "",
     "Audience": "authenticated"
+  },
+  "ApiSports": {
+    "ApiKey": ""
+  },
+  "GNews": {
+    "ApiKey": ""
   },
   "Logging": {
     "LogLevel": {
