--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# EF / tooling build artifacts (do not commit)
+**/BuildHost*/
+*.resources.dll
+
 # Visual Studio
 .vs/
 *.user
