Use static NBA data for seasons

--- a/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
+++ b/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
@@ -9,7 +9,7 @@
     "JwtSecret": "",
     "Audience": "authenticated"
   },
-  "ApiSports": {
+  "BALLDontLie": {
     "ApiKey": ""
   },
   "GNews": {
