Get competition, team, players, roasters through ESPN hidden API

--- a/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
+++ b/src/Host/OspreyPulseAPI.Api/appsettings.Development.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": ""
-  },
+  "ConnectionStrings": { "DefaultConnection": "" },
   "Supabase": {
     "Url": "http://127.0.0.1:54321",
     "Authority": "http://127.0.0.1:54321/auth/v1",
@@ -9,16 +7,13 @@
     "JwtSecret": "",
     "Audience": "authenticated"
   },
-  "BALLDontLie": {
-    "ApiKey": ""
-  },
-  "GNews": {
-    "ApiKey": ""
-  },
+  "BALLDontLie": { "ApiKey": "" },
+  "GNews": { "ApiKey": "" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   }
 }
